# ndk-vsomeip-hello-world

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindBoost.cmake
doc/: SequenceDiagram.puml
vsomeip-hello-world/: .gitignore  settings.gradle
vsomeip-hello-world/app/: build.gradle
vsomeip-hello-world/app/src/androidTest/java/com/example/vsomeiphelloworld/: ExampleInstrumentedTest.java
vsomeip-hello-world/app/src/main/: AndroidManifest.xml
vsomeip-hello-world/app/src/main/cpp/: CMakeLists.txt  MainActivityJNI.cpp  ServiceVsomeipHelloWorldClientJNI.cpp  ServiceVsomeipHelloWorldServiceJNI.cpp
vsomeip-hello-world/app/src/main/java/com/example/vsomeiphelloworld/: MainActivity.java  ServiceVsomeipHelloWorldClient.java  ServiceVsomeipHelloWorldService.java
vsomeip-hello-world/app/src/main/res/values/: strings.xml
vsomeip-hello-world/app/src/test/java/com/example/vsomeiphelloworld/: ExampleUnitTest.java
vsomeip-hello-world/gradle/wrapper/: gradle-wrapper.properties
